# game-media-sync

./: .env.example  .gitignore  LICENSE.md  README.md  game_name_resolver.py  gameclips_uploader.py  generate_path_service.py  immich_upload.py  main.py  ps5_times.py  pyproject.toml  requirements.txt  run.sh  steamstuff.py  switch2_upload.py  transfer_handler.py  upload_screenshots.py  vdf.py
.github/workflows/: lint.yml
scripts/: upload_ps5.py  upload_steam.py  upload_switch.py
src/game_media_sync/: __init__.py  cli.py
src/game_media_sync/core/: __init__.py  config.py  metadata.py  tempfiles.py  tracker.py  transfer.py  upload.py
src/game_media_sync/resolvers/: __init__.py  game_name.py
src/game_media_sync/utils/: __init__.py  paths.py  vdf.py
